# oop_lab

./: CMakeLists.txt  README.md  log.txt  main.cpp
IOfiles/: input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  output.txt
factory/: Factory.cpp  Factory.h
game/: DoubleGame.cpp  DoubleGame.h  SingleGame.cpp  SingleGame.h  game.cpp  game.h
game/action/: MoveAction.cpp  MoveAction.h  ObtainBonusAction.cpp  ObtainBonusAction.h  PlayerAction.h
game/component/: Board - 副本.cpp  Board.cpp  Board.h  Bonus.cpp  Bonus.h  GameObserver.h  Movement.h  User.cpp  User.h  log.cpp  log.h  parameter.h
